Fix UI on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -25,14 +25,7 @@ body > * {
 
 .background {
     position: absolute;
-}
-
-.backdrop {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    opacity: .4;
+    background-color: rgba(0, 0, 0, .4);
 }
 
 [data-bg] {
@@ -63,8 +56,9 @@ body > * {
     color: #fff;
     text-align: center;
     padding: 2rem;
-    width: min-content;
+    width: fit-content;
     min-width: 25%;
+    max-width: 576px;
     gap: 1rem;
     background-color: transparent;
     transition: all 1s;
